--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,23 +3,40 @@ owner: doctorfree # Your GitHub organization or username, where this repository 
 repo: upptime # The name of this repository
 
 sites:
-  - name: Ron Record
+  - name: lazyman.dev
+    url: https://lazyman.dev
+  - name: skunkware.dev
+    url: https://skunkware.dev
+  - name: asciiville.dev
+    url: https://asciiville.dev
+  - name: musicplayerplus.dev
+    url: https://musicplayerplus.dev
+  - name: mirrorcommand.dev
+    url: https://mirrorcommand.dev
+  - name: neoman.dev
+    url: https://neoman.dev
+  - name: rooncommand.dev
+    url: https://rooncommand.dev
+  - name: ronrecord.com
     url: https://ronrecord.com
-  - name: Willow Record
+  - name: willowrecord.com
     url: https://willowrecord.com
-  - name: Archive Ron Record
+  - name: archive.ronrecord.com
     url: https://archive.ronrecord.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: fractals.ronrecord.com
+    url: https://fractals.ronrecord.com
+  - name: blog.ronrecord.com
+    url: https://blog.ronrecord.com
 
 assignees: # Users to assign downtime issues (optional)
   - doctorfree
 
 status-website:
+  theme: ocean
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: lazyman.dev
-  # baseUrl: /your-repo-name
+  # cname: lazyman.dev
+  baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/doctorfree/upptime/master/assets/upptime-icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
