--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -38,16 +38,14 @@ status-website:
   # cname: lazyman.dev
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/doctorfree/upptime/master/assets/upptime-icon.svg
-  name: Upptime
+  name: Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is my websites status page using **real-time** data from my [GitHub repository](https://github.com/doctorfree/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: Status
-      href: /
+    - title: Repo
+      href: https://github.com/$OWNER/$REPO
     - title: Profile
       href: https://github.com/$OWNER
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
