--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -34,7 +34,7 @@ assignees: # Users to assign downtime issues (optional)
   - doctorfree
 
 status-website:
-  # theme: dark
+  theme: dark
   themeUrl: https://uptime.ronrecord.com/custom.css
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
