--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -29,6 +29,7 @@ sites:
     url: https://blog.ronrecord.com
   - name: themes.ronrecord.com
     url: https://doctorfree.github.io/google-chrome-themes
+    icon: https://doctorfree.github.io/upptime/assets/chrome.svg
 
 assignees: # Users to assign downtime issues (optional)
   - doctorfree
